Refactor TransportRecord to use Map.copyOf for field initialization and add Lombok @Getter annotation